--- a/webpack/handlebar/itemDetailPage.hbs
+++ b/webpack/handlebar/itemDetailPage.hbs
@@ -6,7 +6,7 @@
     <title>{{data.Name}} - Assistant for No Man's Sky</title>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#{{data.Colour}}" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="https://nmsassistant.com/manifest.json" />
 
@@ -14,7 +14,7 @@
 
     <link type="text/plain" rel="author" href="/humans.txt" />
     <meta name="application-name" content="{{data.Name}} - Assistant for No Man&#39;s Sky">
-    <meta name="theme-color" content="#3F51B5">
+    <meta name="theme-color" content="#{{data.Colour}}">
     <meta name="description" content="{{data.Description}}">
     <meta name="robots" content="index,follow">
     <meta name="googlebot" content="index,follow">
@@ -33,7 +33,7 @@
     <!-- Google / Search Engine Tags -->
     <meta itemprop="name" content="{{data.Name}} - Assistant for No Man&#39;s Sky">
     <meta itemprop="description" content="{{data.Description}}">
-    <meta itemprop="image" content="https://nmsassistant.com/assets/images/{{data.Icon}}">
+    <meta itemprop="image" content="https://app.nmsassistant.com/assets/images/{{data.Icon}}">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://nmsassistant.com">
@@ -42,20 +42,20 @@
     <meta property="og:locale" content="en_US">
     <meta property="og:description" content="{{data.Description}}">
     <meta property="og:site_name" content="{{data.Name}} - Assistant for No Man&#39;s Sky">
-    <meta property="og:image" content="https://nmsassistant.com/assets/images/{{data.Icon}}">
+    <meta property="og:image" content="https://app.nmsassistant.com/assets/images/{{data.Icon}}">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:site" content="@AssistantNMS">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="{{data.Name}} - Assistant for No Man&#39;s Sky">
     <meta name="twitter:description" content="{{data.Description}}">
-    <meta name="twitter:image" content="https://nmsassistant.com/assets/images/{{data.Icon}}">
+    <meta name="twitter:image" content="https://app.nmsassistant.com/assets/images/{{data.Icon}}">
     <!-- Meta Tags Generated via http://heymeta.com -->
 
     <!-- Apple Meta Tags -->
-    <link rel="mask-icon" href="/assets/favicon/safari-pinned-tab.svg" color="#3F51B5">
+    <link rel="mask-icon" href="/assets/favicon/safari-pinned-tab.svg" color="#{{data.Colour}}">
     <meta name="apple-itunes-app" content="app-id=id1480287625,app-argument=assistantNMSWeb">
-    <link rel="apple-touch-icon" sizes="180x180" href="https://nmsassistant.com/assets/images/{{data.Icon}}">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://app.nmsassistant.com/assets/images/{{data.Icon}}">
     <!-- <link rel="apple-touch-startup-image" href="/path/to/launch.png"> -->
     <meta name="apple-mobile-web-app-title" content="{{data.Name}} - Assistant for No Man&#39;s Sky">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -69,7 +69,7 @@
 
     <!-- Microsoft Meta Tags -->
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="msapplication-TileColor" content="#3F51B5">
+    <meta name="msapplication-TileColor" content="#{{data.Colour}}">
     <meta name="msapplication-config" content="/browserconfig.xml">
 
     <link rel="preload" as="image" href="/assets/images/loader.svg">
