--- a/webpack/handlebar/itemDetailPage.hbs
+++ b/webpack/handlebar/itemDetailPage.hbs
@@ -33,7 +33,7 @@
     <!-- Google / Search Engine Tags -->
     <meta itemprop="name" content="{{data.Name}} - Assistant for No Man&#39;s Sky">
     <meta itemprop="description" content="{{data.Description}}">
-    <meta itemprop="image" content="https://app.nmsassistant.com/assets/images/{{data.Icon}}">
+    <meta itemprop="image" content="{{data.Icon}}">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://nmsassistant.com">
@@ -42,20 +42,20 @@
     <meta property="og:locale" content="en_US">
     <meta property="og:description" content="{{data.Description}}">
     <meta property="og:site_name" content="{{data.Name}} - Assistant for No Man&#39;s Sky">
-    <meta property="og:image" content="https://app.nmsassistant.com/assets/images/{{data.Icon}}">
+    <meta property="og:image" content="{{data.Icon}}">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:site" content="@AssistantNMS">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="{{data.Name}} - Assistant for No Man&#39;s Sky">
     <meta name="twitter:description" content="{{data.Description}}">
-    <meta name="twitter:image" content="https://app.nmsassistant.com/assets/images/{{data.Icon}}">
+    <meta name="twitter:image" content="{{data.Icon}}">
     <!-- Meta Tags Generated via http://heymeta.com -->
 
     <!-- Apple Meta Tags -->
     <link rel="mask-icon" href="/assets/favicon/safari-pinned-tab.svg" color="#{{data.Colour}}">
     <meta name="apple-itunes-app" content="app-id=id1480287625,app-argument=assistantNMSWeb">
-    <link rel="apple-touch-icon" sizes="180x180" href="https://app.nmsassistant.com/assets/images/{{data.Icon}}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{data.Icon}}">
     <!-- <link rel="apple-touch-startup-image" href="/path/to/launch.png"> -->
     <meta name="apple-mobile-web-app-title" content="{{data.Name}} - Assistant for No Man&#39;s Sky">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -153,7 +153,7 @@
         <h1>{{data.Name}} - Assistant for No Man's Sky</h1>
         <div class="row border-bottom">
             <div style="background-color: {{data.Colour}};">
-                <img src="/assets/images/{{data.Icon}}" title="{{data.Name}}" draggable="false" alt="{{data.Name}}">
+                <img src="{{data.Icon}}" title="{{data.Name}}" draggable="false" alt="{{data.Name}}">
             </div>
             <div class="col-12 col-lg-10 col-md-10 col-sm-8 col-xs-9">
                 <h2>{{data.Name}}</h2>
