--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -1,8 +1,16 @@
+$nmsAlphaThemed: 'NMSFuturaProBook',
+Helvetica,
+sans-serif !important;
+$expAlphaThemed: 'NMSExpeditionAlphabet',
+Helvetica,
+sans-serif !important;
+
 @import "./custom/guideCardListTile";
 @import "./custom/segmentedControl";
 @import "./custom/chip";
 @import "./custom/guide";
 @import "./custom/portal";
+@import "./custom/expedition";
 @import "./custom/ribbon";
 @import "./custom/general";
 @import "./custom/scrollbar";
