--- a/src/scss/custom/_theme.scss
+++ b/src/scss/custom/_theme.scss
@@ -81,6 +81,11 @@ body {
                 color: white;
             }
 
+            &.white {
+                background-color: white;
+                color: $brand-primary-background;
+            }
+
             &.secondary {
                 background-color: $brand-secondary;
                 color: white;
