better drawer menu

--- a/src/components/common/genericListPresenter/genericListPresenter.scss
+++ b/src/components/common/genericListPresenter/genericListPresenter.scss
@@ -31,8 +31,8 @@
             }
 
             .image-container {
-                max-height: 100px;
-                max-width: 100px;
+                height: 100px;
+                width: 100px;
                 display: inline-block;
                 position: relative;
 
