--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -7,6 +7,7 @@ sans-serif !important;
 
 @import "./custom/guideCardListTile";
 @import "./custom/segmentedControl";
+@import "./custom/nmsfmPresenter";
 @import "./custom/chip";
 @import "./custom/guide";
 @import "./custom/portal";
