--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -5,6 +5,7 @@ $expAlphaThemed: 'NMSExpeditionAlphabet',
 Helvetica,
 sans-serif !important;
 
+@import "./custom/genericListPresenter";
 @import "./custom/guideCardListTile";
 @import "./custom/segmentedControl";
 @import "./custom/nmsfmPresenter";
