data json and UI fixes

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -12,6 +12,7 @@ sans-serif !important;
 @import "./custom/chip";
 @import "./custom/guide";
 @import "./custom/portal";
+@import "./custom/social";
 @import "./custom/expedition";
 @import "./custom/ribbon";
 @import "./custom/general";
