improve weekend mission

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -9,6 +9,7 @@ sans-serif !important;
 @import "./custom/guideCardListTile";
 @import "./custom/segmentedControl";
 @import "./custom/nmsfmPresenter";
+@import "./custom/weekendMissionMenu";
 @import "./custom/chip";
 @import "./custom/guide";
 @import "./custom/portal";
