--- a/src/scss/custom/_general.scss
+++ b/src/scss/custom/_general.scss
@@ -2,12 +2,23 @@
 @import url('https://raw.githubusercontent.com/NMSCD/expedition-alphabet/master/public/assets/font/NMSExpeditionAlphabet.css');
 
 // @font-face {
-//     font-family: 'NMSFuturaProBook';
-//     src: url('NMSFuturaProBook_Kerned.eot'); /* IE9 Compat Modes */
-//     src: url('NMSFuturaProBook_Kerned.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-//          url('NMSFuturaProBook_Kerned.woff') format('woff'), /* Modern Browsers */
-//          url('NMSFuturaProBook_Kerned.ttf') format('truetype'); /* Safari, Android, iOS */
-//              font-style: normal;
+//     font-family: 'NMSExpeditionAlphabet';
+//     src: url('https://nmscd.github.io/No-Mans-Sky-Universal-Font/assets/font/NMSFuturaProBook_Kerned/Web-TT/NMSExpeditionAlphabet.eot');
+//     src: url('https://nmscd.github.io/No-Mans-Sky-Universal-Font/assets/font/NMSFuturaProBook_Kerned/Web-TT/NMSExpeditionAlphabet.eot?#iefix') format('embedded-opentype'),
+//         url('https://nmscd.github.io/No-Mans-Sky-Universal-Font/assets/font/NMSFuturaProBook_Kerned/Web-TT/NMSExpeditionAlphabet.woff') format('woff'),
+//         url('https://nmscd.github.io/No-Mans-Sky-Universal-Font/assets/font/NMSFuturaProBook_Kerned/Web-TT/NMSExpeditionAlphabet.ttf') format('truetype');
+//     font-style: normal;
+//     font-weight: normal;
+//     text-rendering: optimizeLegibility;
+// }
+
+// @font-face {
+//     font-family: 'NMSExpeditionAlphabet';
+//     src: url('https://raw.githubusercontent.com/NMSCD/expedition-alphabet/master/public/assets/font/NMSExpeditionAlphabet.eot');
+//     src: url('https://raw.githubusercontent.com/NMSCD/expedition-alphabet/master/public/assets/font/NMSExpeditionAlphabet.eot?#iefix') format('embedded-opentype'),
+//         url('https://raw.githubusercontent.com/NMSCD/expedition-alphabet/master/public/assets/font/NMSExpeditionAlphabet.woff') format('woff'),
+//         url('https://raw.githubusercontent.com/NMSCD/expedition-alphabet/master/public/assets/font/NMSExpeditionAlphabet.ttf') format('truetype');
+//     font-style: normal;
 //     font-weight: normal;
 //     text-rendering: optimizeLegibility;
 // }
