--- a/src/scss/custom/_social.scss
+++ b/src/scss/custom/_social.scss
@@ -5,6 +5,10 @@
         font-size: 1rem;
         display: flex;
         flex-direction: row;
+
+        &.center {
+            justify-content: center;
+        }
     }
 
     .card-social {
