--- a/src/scss/custom/_general.scss
+++ b/src/scss/custom/_general.scss
@@ -251,6 +251,35 @@ img.grayscale {
     position: relative;
 }
 
+.context-menu {
+    z-index: 9999;
+    position: absolute;
+    top: 75px;
+    left: 75px;
+    padding: 0.5em;
+    background-color: rgba(0, 0, 0, 0.8);
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    text-align: left;
+    min-width: 180px;
+
+    .context-menu__item {
+        padding-left: 0.5em;
+        padding-right: 0.5em;
+        border-radius: 5px;
+        color: rgba(255, 255, 255, 0.75);
+
+        i {
+            font-size: 16px;
+        }
+
+        &:hover {
+            background-color: rgba(255, 255, 255, 0.2);
+        }
+    }
+}
+
 .noselect {
     -webkit-touch-callout: none;
     /* iOS Safari */
