--- a/src/scss/custom/_expedition.scss
+++ b/src/scss/custom/_expedition.scss
@@ -36,6 +36,11 @@
         //     transform: scale(1.25);
         // }
 
+
+        .image-container {
+            min-width: 100px;
+        }
+
         img {
             width: 100%;
             max-width: 100px;
