--- a/src/scss/custom/_genericListPresenter.scss
+++ b/src/scss/custom/_genericListPresenter.scss
@@ -35,7 +35,7 @@
 
             .image-container {
                 height: 100px;
-                width: 100px;
+                min-width: 100px;
                 display: inline-block;
                 position: relative;
 
