--- a/src/scss/custom/_general.scss
+++ b/src/scss/custom/_general.scss
@@ -5,6 +5,14 @@ body {
     -moz-osx-font-smoothing: grayscale;
     text-align: center;
     background-color: $brand-primary-background;
+
+    .secondary-colour {
+        color: $brand-secondary;
+    }
+
+    .uppercase {
+        text-transform: capitalize;
+    }
 }
 
 #app.nmsThemed {
@@ -55,12 +63,16 @@ body {
 }
 
 img.grayscale {
-    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
+    // filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
     /* Firefox 3.5+ */
     filter: gray;
     /* IE6-9 */
     -webkit-filter: grayscale(100%);
     /* Chrome 19+ & Safari 6+ */
+}
+
+.material-icons.small {
+    font-size: 16px !important;
 }
 
 .material-icons.x2 {
@@ -182,6 +194,10 @@ img.grayscale {
     padding-right: 4rem !important;
 }
 
+.pos-rel {
+    position: relative;
+}
+
 .progress.custom {
     border-radius: 25px;
     height: 3em;
@@ -224,10 +240,6 @@ img.grayscale {
 .store {
     padding-left: .5em;
     padding-right: .5em;
-}
-
-.pos-rel {
-    position: relative;
 }
 
 #app .main-panel #navbar.navbar {
