better noselect handling

--- a/src/scss/custom/_general.scss
+++ b/src/scss/custom/_general.scss
@@ -186,6 +186,10 @@ img.grayscale {
     padding-top: 1em;
 }
 
+.pb1 {
+    padding-bottom: 1em;
+}
+
 .pb5 {
     padding-bottom: 5em;
 }
@@ -288,7 +292,7 @@ img.grayscale {
     }
 }
 
-.noselect {
+.noselect, .tippy-popper {
     -webkit-touch-callout: none;
     /* iOS Safari */
     -webkit-user-select: none;
