--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-@import './scss/material-dashboard.scss';
-@import '../node_modules/@material/react-fab/dist/fab.css';
-@import '../node_modules/react-toastify/dist/ReactToastify.css';
-@import './scss/custom.scss';
+@import "./scss/material-dashboard.scss";
+@import "../node_modules/@material/react-fab/dist/fab.css";
+@import "../node_modules/react-toastify/dist/ReactToastify.css";
+@import "./scss/custom.scss";
