--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -1,9 +1,5 @@
-$nmsAlphaThemed: 'NMSFuturaProBook',
-Helvetica,
-sans-serif !important;
-$expAlphaThemed: 'NMSExpeditionAlphabet',
-Helvetica,
-sans-serif !important;
+$nmsAlphaThemed: "NMSFuturaProBook", Helvetica, sans-serif !important;
+$expAlphaThemed: "NMSExpeditionAlphabet", Helvetica, sans-serif !important;
 
 @import "./custom/genericListPresenter";
 @import "./custom/guideCardListTile";
