view community mission timeline

--- a/src/scss/custom/_general.scss
+++ b/src/scss/custom/_general.scss
@@ -144,6 +144,11 @@ img.grayscale {
     margin-top: 3em;
 }
 
+.mh-1em {
+    margin-left: 1em;
+    margin-right: 1em;
+}
+
 .mb-1em {
     margin-bottom: 1em;
 }
