added advanced search

--- a/src/scss/custom/_general.scss
+++ b/src/scss/custom/_general.scss
@@ -4,6 +4,10 @@
     --assistantapps-team-member-link-text-colour: #{$brand-secondary};
 }
 
+.main-panel.noscroll {
+    overflow: hidden;
+}
+
 #app,
 body {
     font-family: "Roboto", Helvetica, Arial, sans-serif;
