--- a/src/scss/custom/_general.scss
+++ b/src/scss/custom/_general.scss
@@ -266,6 +266,15 @@ img.grayscale {
     }
 }
 
+.colour-swatch {
+    display: inline-block;
+    height: 2em;
+    width: 5em;
+    margin-left: 0.75em;
+    margin-bottom: -0.65em;
+    border-radius: 5px;
+}
+
 .context-menu {
     z-index: 9999;
     position: absolute;
