--- a/src/scss/custom/_theme.scss
+++ b/src/scss/custom/_theme.scss
@@ -264,6 +264,7 @@ body {
 
 .react-modal-sheet-content {
     padding-bottom: 3em;
+    user-select: auto !important;
 
     a {
         color: $brand-secondary;
