--- a/src/scss/custom/_theme.scss
+++ b/src/scss/custom/_theme.scss
@@ -23,7 +23,8 @@ body {
     .main-panel {
         background-color: $brand-primary-background;
 
-        #navbar.navbar {
+        #navbar.navbar,
+        .navbar-brand {
             background-color: $brand-primary;
             color: white;
         }
@@ -92,8 +93,8 @@ body {
             margin-top: 1em;
         }
 
-        .table > thead > tr > th,
-        .table > tbody > tr > td {
+        .table>thead>tr>th,
+        .table>tbody>tr>td {
             border-color: white;
         }
     }
@@ -126,7 +127,7 @@ body {
             color: white;
         }
 
-        li.active > a {
+        li.active>a {
             background-color: $brand-primary;
         }
     }
@@ -135,7 +136,7 @@ body {
         input {
             color: $white-color;
             background-image: linear-gradient(to top, #{$brand-primary} 2px, rgba(63, 81, 181, 0) 2px),
-                linear-gradient(to top, #{$white-color} 1px, rgba(210, 210, 210, 0) 1px);
+            linear-gradient(to top, #{$white-color} 1px, rgba(210, 210, 210, 0) 1px);
 
             $placeholderColor: rgba(255, 255, 255, 0.9);
             $placeholderFontSize: 0.75em;
@@ -226,7 +227,7 @@ body {
     }
 
     .discussion {
-        > .bubble.sender {
+        >.bubble.sender {
             background-color: #606060;
             color: #fff;
 
@@ -235,7 +236,7 @@ body {
             }
         }
 
-        > .bubble.recipient {
+        >.bubble.recipient {
             background-color: $brand-primary;
 
             &:before {
@@ -243,7 +244,7 @@ body {
             }
         }
 
-        > .bubble.option {
+        >.bubble.option {
             background-color: $brand-secondary;
             color: black;
         }
