--- a/src/scss/custom/_general.scss
+++ b/src/scss/custom/_general.scss
@@ -107,17 +107,20 @@ img.grayscale {
     border-radius: 0;
 }
 
+.navbar.navbar-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 80px !important;
+    border-radius: 0;
+    box-shadow: unset;
+    background-color: $brand-primary;
+}
+
 #app .main-panel {
     height: 100vh;
     // overflow-y: scroll;
-
-    >div {
-        overflow: hidden auto;
-
-        >div {
-            overflow: hidden auto;
-        }
-    }
 
     .content {
         margin-top: 0;
