--- a/src/scss/custom/_sidebar.scss
+++ b/src/scss/custom/_sidebar.scss
@@ -28,6 +28,7 @@
             // white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
+            padding-right: 1.5em;
         }
 
         &.sub {
