--- a/src/scss/custom/_catalogue.scss
+++ b/src/scss/custom/_catalogue.scss
@@ -30,7 +30,7 @@ $grip-col-min-max: minmax(50px, 200px);
     }
 }
 
-.game-item-list>div>div>div {
+.game-item-list > div > div > div {
     padding-top: 1em;
     padding-bottom: 3em;
     margin-bottom: 3em;
@@ -133,7 +133,7 @@ $grip-col-min-max: minmax(50px, 200px);
                 order: 1;
             }
 
-            >span {
+            > span {
                 width: 100%;
             }
         }
@@ -197,5 +197,12 @@ $grip-col-min-max: minmax(50px, 200px);
                 color: $brand-secondary;
             }
         }
+    }
+}
+
+.highlight-text {
+    word-wrap: unset;
+    span {
+        word-wrap: break-word;
     }
 }
